--- a/05_DynamicContents/package.json
+++ b/05_DynamicContents/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.8",
     "express": "^4.16.3",
     "express-handlebars": "^6.0.6",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "uuid": "^8.3.2"
   }
 }
