--- a/05_DynamicContents/package.json
+++ b/05_DynamicContents/package.json
@@ -21,6 +21,7 @@
     "express-handlebars": "^6.0.6",
     "mysql2": "^2.3.3",
     "pug": "^3.0.2",
+    "sequelize": "^6.21.4",
     "uuid": "^8.3.2"
   }
 }
