--- a/prerequisite/package.json
+++ b/prerequisite/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "nodemon": "^2.0.19"
   }
 }
