--- a/prerequisite/package.json
+++ b/prerequisite/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "mongoose": "^6.6.0",
     "nodemon": "^2.0.19"
   }
 }
