--- a/prerequisite/package.json
+++ b/prerequisite/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "mongoose": "^6.6.0",
-    "nodemon": "^2.0.19"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.19",
+    "uuid": "^9.0.0"
   }
 }
